[eunji][#add]업무담당자 엑셀 다운로드 추가 및 지원금 관리 페이지 추가

--- a/KosaESS/src/main/resources/templates/include/manager_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar.html
@@ -57,7 +57,7 @@
 					<span class="links_name">교육생 관리</span>
 			</a> <span class="tooltip">교육생 관리</span></li>
 			
-			<li><a th:href="@{/__${session.role}__/money/list}"> <i 
+			<li><a th:href="@{/__${session.role}__/subsidy/list}"> <i 
 					class='bx bx-heart'><img th:src="@{/img/money_icon_white.png}"></i> 
 					<span class="links_name">지원금 관리</span> 
 			</a> <span class="tooltip">지원금 관리</span></li>
@@ -67,9 +67,6 @@
 					<span class="links_name">기준 정보 관리</span>
 			</a> <span class="tooltip">기준 정보 관리</span></li>
 			<!--  
-			<li><a href="#"> <i class='bx bx-cog'></i> <span
-					class="links_name">출퇴근 관리</span>
-			</a> <span class="tooltip">출퇴근 관리</span></li>
 			<li><a href="#"> <i class='bx bx-cog'></i> <span
 					class="links_name">만족도 조사 관리</span>
 			</a> <span class="tooltip">만족도 조사 관리</span></li>
