--- a/KosaESS/src/main/resources/templates/admin/class_list.html
+++ b/KosaESS/src/main/resources/templates/admin/class_list.html
@@ -140,7 +140,7 @@
 				<div class="content_info_wrap">
 					<div class="content_info">
 						<span>총 <span class="class_list_cnt"
-							th:text="${#lists.size(classList)}">classListCnt</span> 개
+							th:text="${#lists.size(classList)}">classListCnt</span> 건
 						</span>
 					</div>
 					<div class="content_info_btn_wrap">
