--- a/KosaESS/src/main/resources/templates/manager/class_list.html
+++ b/KosaESS/src/main/resources/templates/manager/class_list.html
@@ -56,7 +56,11 @@
 				</div>
 			</div>
 			<!-- End 검색 필터 부분 -->
-
+				<div class="result_count">
+					<span>총&nbsp;</span>
+					<span th:text="${resultCount}" id="result_count"></span>
+					<span>&nbsp;건</span>
+				</div>
 			<!-- 컨텐츠 리스트 부분 -->
 			<div class="content_list">
 				<table id="class_list_table" class="content_list_table">
