--- a/KosaESS/src/main/resources/templates/manager/wlog_list.html
+++ b/KosaESS/src/main/resources/templates/manager/wlog_list.html
@@ -42,10 +42,10 @@
 		<div class="search_filter_wrap">
 			<!-- 검색 필터 테이블 -->
 			<div class="search_filter_table">
-				<div class="search_filter_name">교육과정명</div>
+				<div class="search_filter_name">교육과정</div>
 				<div class="search_filter_input">
 					<select id="class_selector">
-						<option value="" disabled selected>교육과정명을 선택하세요</option>
+						<option value="" disabled selected>교육과정을 선택하세요</option>
 						<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class}" />
 					</select>
 				</div>
@@ -76,9 +76,8 @@
 						<input type="checkbox" class="chkWokCd" th:value="${wlogCd.cmcdId}" checked="checked">
 					</div>
 				</div>
-				<div class="search_filter_name">기록 상태</div>
+				<div class="search_filter_name">사유서</div>
 				<div class="search_filter_input">
-					<span>사유서 포함 된 기록만 보기</span>
 					<input type="checkbox" id="fileContainedOnly">
 				</div>
 			</div>
@@ -94,11 +93,10 @@
 		
 		<!-- 테이블 조작 -->
 		<div class="table_controller" id="tableController">
-			<div>
-				<span>
-					<span th:text="${wlogCnt}" id="wlogCnt"></span>
-					<span class="wlog_count_unit">건</span>
-				</span>
+			<div class="result_count">
+				<span>총&nbsp;</span>
+				<span th:text="${wlogCnt}" id="wlogCnt"></span>
+				<span>&nbsp;건</span>
 			</div>
 			<div class="wlog_update_buttons">
 				<div th:each="wlogCd:${wlogCdList}" class="wlog_controller">
@@ -107,6 +105,7 @@
 			</div>
 		</div>
 		<!-- End : 테이블 조작 -->
+		
 		
 		<!-- table 시작 -->
 		<table id="wlog_list_table">
@@ -120,7 +119,6 @@
 					<th>퇴근</th>
 					<th>출석 인정 시간<br>(h)</th>
 					<th>출석 상태</th><!-- 셀렉박스 -->
-					<th>삭제 여부</th>
 					<th>사유서</th>
 					<th>처리 상태</th><!-- 사유서 모달에서 변경함 -->
 				</tr>
@@ -136,7 +134,6 @@
 					<td class="fixed_length_cell" th:text="${wlog.outTm!=null?#dates.format(wlog.outTm,'yyyy-MM-dd HH:mm:ss'):'-'}">퇴근 기록</td>
 					<td class="number_cell" th:text="${#numbers.formatDecimal(wlog.wlogTotalTm, 1, 1)}">출석 인정 시간</td>
 					<td class="fixed_length_cell" th:text="${wlog.wlogCd}">출석 상태</td>
-					<td class="fixed_length_cell" th:text="${wlog.deleteYn}">삭제 여부</td>
 					<td class="fixed_length_cell"><img class="resn_icon" th:if="${wlog.resnId!=null}" onclick="showModal(this)" th:value="${wlog.resnId}" src="/img/file.png"></td>
 					<td class="fixed_length_cell" th:text="${wlog.prcsCd}">처리 상태</td>
 				</tr>
