--- a/KosaESS/src/main/resources/templates/student/class_list.html
+++ b/KosaESS/src/main/resources/templates/student/class_list.html
@@ -107,7 +107,7 @@
 				</tbody>
 				<tfoot class="classFoot" style="display: none; height: 300px;">
 					<tr>
-						<td><h3>조회된 결과 없습니다.</h3></td>
+						<td><h3>조회된 결과가 없습니다.</h3></td>
 					</tr>
 				</tfoot>
 			</table>
