--- a/KosaESS/src/main/resources/static/css/manager/modal_style.css
+++ b/KosaESS/src/main/resources/static/css/manager/modal_style.css
@@ -41,3 +41,15 @@
 	width: 50%;
 	justify-content: center;
 }
+
+.resn_file_list{
+	list-style: none;
+}
+.resn_file_list a{
+	text-decoration-line: none;
+	color: #0E5881;
+	font-size: 1.1em;
+}
+.resn_file_list img{
+	height : 1.1em;
+}
