--- a/KosaESS/src/main/resources/templates/student/mypage.html
+++ b/KosaESS/src/main/resources/templates/student/mypage.html
@@ -115,9 +115,11 @@
 									<th>지원기간</th>
 									<th>교육기간</th>
 									<th>정원</th>
+									<th>교육상태</th>
 									<th>지원날짜</th>
 									<th>지원상태</th>
 									<th>수정/수강</th>
+
 								</tr>
 							</thead>
 							<tbody>
@@ -140,9 +142,9 @@
 										th:text="${ApplyDetailDTO.aplyId}"></span></td>
 								</tr>
 							</tbody>
-							<tfoot class="applyFoot" style="display: none; height: 300px;">
+							<tfoot class="aplyFoot" style="display: none; height: 300px;">
 								<tr>
-									<td colspan="8"><h3>조회된 결과가 없습니다.</h3></td>
+									<td colspan="9"><h3>조회된 결과가 없습니다.</h3></td>
 								</tr>
 							</tfoot>
 						</table>
@@ -211,7 +213,8 @@
 					<div class="listHead">
 						<div style="display: flex; width: 80%;">
 							<h3 style="margin-right: 3%;">출퇴근 관리</h3>
-							<select name="wlogNm" id="wlogClssNm">
+							<select name="wlogNm" id="wlogClssNm"
+								th:if="${wlogList.size() > 0}">
 								<option value="">전체</option>
 								<option th:each="Wlog: ${wlogList}" class="wlogOption"
 									th:value="${Wlog.clssNm}" th:text="${Wlog.clssNm}">
@@ -250,7 +253,7 @@
 							</tbody>
 							<tfoot class="wlogFoot" style="display: none; height: 300px;">
 								<tr>
-									<td colspan="7"><h3>조회된 결과가 없습니다.</h3></td>
+									<td colspan="8"><h3>조회된 결과가 없습니다.</h3></td>
 								</tr>
 							</tfoot>
 						</table>
@@ -320,7 +323,8 @@
 					<div class="listHead">
 						<div style="display: flex; width: 80%;">
 							<h3 style="margin-right: 3%;">지원금 수령 내역</h3>
-							<select name="sbsdNm" id="sbsdClssNm">
+							<select name="sbsdNm" id="sbsdClssNm"
+								th:if="${sbsdList.size() > 0}">
 								<option value="">전체</option>
 								<option th:each="sbsd: ${sbsdList}" class="sbsdOption"
 									th:value="${sbsd.clssNm}" th:text="${sbsd.clssNm}">
@@ -338,8 +342,8 @@
 								<th>수령날짜</th>
 								<th>수령금액</th>
 								<th>수령상태</th>
-								
-								
+
+
 							</tr>
 						</thead>
 						<tbody>
